--- a/app/views/partials/home.phtml
+++ b/app/views/partials/home.phtml
@@ -30,7 +30,7 @@
 </div> -->
 
 <div class="parallax">
-    <header class="primary-header">
+    <header class="primary-header fade-in">
         <div id="hero-header">
             <div class="primary-header__inner">
                 <div class="logo">
@@ -52,7 +52,7 @@
             <p>En reconversion professionnelle, j’ai intégré le bachelor de My Digital School qui me forme aux métiers du numérique. Aujourd’hui en deuxième année, j’ai choisi de me spécialiser dans le développement.</p>
             <div class="buttons">
                 <a href="https://www.linkedin.com/in/audrey-norvez-a25673253/" target="_blank" class="Button PrimaryPinkButton">Mes actus</a>
-                <a onclick="window.open('https://drive.google.com/file/d/1EOrIvNkuYLq3DIy8fubn0Ty0F4IOoWY-/view?usp=sharing','_blank');" class="Button SecondaryPinkButton">Découvrir mon CV</a>
+                <a onclick="window.open('https://drive.google.com/file/d/1vE8P0IgKtdgiQYVRpTlWnV7DvUQm6HGQ/view?usp=drive_link','_blank');" class="Button SecondaryPinkButton">Découvrir mon CV</a>
             </div>
         </div>
     </div>
@@ -93,7 +93,8 @@
         <div>
             <h2>Mes compétences</h2>
             <P>Depuis mon entrée à My Digital School,  j’ai eu l’occasion de développer des compétences en web design, par la réalisation de chartes graphiques, de logo, de maquettes mais aussi d’affiches, de posts réseaux...<br>J’ai également appris différents langages et outils ce qui m’a permis de réaliser plusieurs projets comme des sites vitrines, e-commerce ou des blogs.</P>
-            <a onclick="window.open('https://drive.google.com/file/d/1EOrIvNkuYLq3DIy8fubn0Ty0F4IOoWY-/view?usp=sharing','_blank');" class="Button SecondaryPinkButton">Découvrir mon CV</a>
+            <a onclick="window.open('https://drive.google.com/file/d/1vE8P0IgKtdgiQYVRpTlWnV7DvUQm6HGQ/view?usp=drive_link
+            ','_blank');" class="Button SecondaryPinkButton">Découvrir mon CV</a>
         </div>
         <div>
             <img class="bubble" src="../public/assets/img/bulles/bulle-dev.png">
