--- a/app/views/partials/home.phtml
+++ b/app/views/partials/home.phtml
@@ -30,7 +30,7 @@
 </div> -->
 
 <div class="parallax">
-    <header class="primary-header fade-in">
+    <header class="primary-header">
         <div id="hero-header">
             <div class="primary-header__inner">
                 <div class="logo">
@@ -59,8 +59,8 @@
     <img class="parallax__bg" src="../public/assets/img/hero.png">
 </div>
 
-<div id="btnScrollToLifeSection" class="scrollTo scrollToLifeSection flex">
-    <img id="imgScrollDown" src="../public/assets/img/arrow.svg" alt="bouton pour découvrir mon parcours"/>
+<div id="btnScrollToLifeSection" class="flex">
+    <img id="imgScrollDown" class="scrollTo scrollToLifeSection"  src="../public/assets/img/arrow.svg" alt="bouton pour découvrir mon parcours"/>
 </div>
 
 <a id="scrollToTop" class="flex">
