--- a/app/views/partials/home.phtml
+++ b/app/views/partials/home.phtml
@@ -39,7 +39,7 @@
                 <nav class="primary-nav">
                     <ul role="list">
                         <li class="scrollTo scrollToLifeSection"><a>Présentation</a></li>
-                        <li><a href="?p=projets">Projets</a></li>
+                        <li><a href="?v=projects">Projets</a></li>
                         <li class="scrollTo scrollToContactSection"><a>Contact</a></li>
                     </ul>
                 </nav>
@@ -93,8 +93,7 @@
         <div>
             <h2>Mes compétences</h2>
             <P>Depuis mon entrée à My Digital School,  j’ai eu l’occasion de développer des compétences en web design, par la réalisation de chartes graphiques, de logo, de maquettes mais aussi d’affiches, de posts réseaux...<br>J’ai également appris différents langages et outils ce qui m’a permis de réaliser plusieurs projets comme des sites vitrines, e-commerce ou des blogs.</P>
-            <a onclick="window.open('https://drive.google.com/file/d/1vE8P0IgKtdgiQYVRpTlWnV7DvUQm6HGQ/view?usp=drive_link
-            ','_blank');" class="Button SecondaryPinkButton">Découvrir mon CV</a>
+            <a onclick="window.open('https://drive.google.com/file/d/1vE8P0IgKtdgiQYVRpTlWnV7DvUQm6HGQ/view?usp=drive_link','_blank');" class="Button SecondaryPinkButton">Découvrir mon CV</a>
         </div>
         <div>
             <img class="bubble" src="../public/assets/img/bulles/bulle-dev.png">
@@ -107,7 +106,82 @@
         <h2>Mes réalisations</h2>
         <p>Voici quelques projets réalisés depuis mon entrée en première année.</p>
         <div>
-            <p>TOUS LES PROJETS</p>
+            <div id="wrap-project" class="flex wrap">
+                <a href="http://localhost/portfolio/public/?v=projets&p=1">
+                    <div class="project" style="background-color:#d99a8c;">
+                        <div class="flex contain-logo">
+                            <img class="project_logo" src="../public/assets/img/default-image.png">
+                        </div>
+                        <div class="contain-project">
+                            <h3>Nom du projet</h3>
+                            <div class="buttons">
+                                <p class="tag">html</p>
+                                <p class="tag">css</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <div class="project" style="background-color:#d99a8c;">
+                    <div class="flex contain-logo">
+                        <img class="project_logo" src="../public/assets/img/default-image.png">
+                    </div>
+                    <div class="contain-project">
+                        <h3>Nom du projet</h3>
+                        <div class="buttons">
+                            <p class="tag">html</p>
+                            <p class="tag">css</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project" style="background-color:#d99a8c;">
+                    <div class="flex contain-logo">
+                        <img class="project_logo" src="../public/assets/img/default-image.png">
+                    </div>
+                    <div class="contain-project">
+                        <h3>Nom du projet</h3>
+                        <div class="buttons">
+                            <p class="tag">html</p>
+                            <p class="tag">css</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project" style="background-color:#d99a8c;">
+                    <div class="flex contain-logo">
+                        <img class="project_logo" src="../public/assets/img/default-image.png">
+                    </div>
+                    <div class="contain-project">
+                        <h3>Nom du projet</h3>
+                        <div class="buttons">
+                            <p class="tag">html</p>
+                            <p class="tag">css</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project" style="background-color:#d99a8c;">
+                    <div class="flex contain-logo">
+                        <img class="project_logo" src="../public/assets/img/default-image.png">
+                    </div>
+                    <div class="contain-project">
+                        <h3>Nom du projet</h3>
+                        <div class="buttons">
+                            <p class="tag">html</p>
+                            <p class="tag">css</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="project" style="background-color:#d99a8c;">
+                    <div class="flex contain-logo">
+                        <img class="project_logo" src="../public/assets/img/default-image.png">
+                    </div>
+                    <div class="contain-project">
+                        <h3>Nom du projet</h3>
+                        <div class="buttons">
+                            <p class="tag">html</p>
+                            <p class="tag">css</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <a href="#" class="Button PrimaryPinkButton">Voir tous mes projets</a>
         </div>
     </section>
