--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -47,8 +47,8 @@ header{
 
 .parallax > * {
     grid-area: stack;
-    animation: parallax linear;
-    animation-timeline: scroll();
+    /* animation: parallax linear;
+    animation-timeline: scroll(); */
 }
 
 .parallax > img {
@@ -139,7 +139,7 @@ header{
     background-color: var(--700-pink);
     border-radius:5px;
     padding-block: .5rem;
-    margin: 0 290px;
+    margin: 0 15vw;
     animation-name: fade-in;
     animation-duration: 200ms;
 	animation-timing-function: cubic-bezier(.39,.575,.565,1.000);
@@ -260,7 +260,6 @@ header{
 #life, #skills{
     background-color: var(--main-blue);
     color:var(--light-yellow);
-    width:100vw;
 }
 
 #life > h2{
@@ -472,7 +471,7 @@ header{
 #projects{
     background-image: url(../img/front-real.png);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: 0 -50px;
     padding: 150px 200px;
 
@@ -484,5 +483,62 @@ header{
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap:2rem;
+        padding-top: 3vh;
+    }
+}
+
+.project {
+    align-items: center;
+    justify-content: center;
+    width:18vw;
+    height: 32vh;
+    cursor: pointer;
+    > .contain-project {
+        display:none;
+        position:relative;
+        text-align: center;
+        bottom: 5rem;
+        > h3 {
+            color: var(--light-yellow);
+            font-size: 20px;
+            font-family: 'ghibli';
+        }
+    }
+    > .contain-logo {
+        align-items: center;
+        justify-content: center;
+        width:100%;
+        height:100%;
+        > img {
+            width:8vw;
+        }
+    }
+    &:hover {
+        transition: filter ease-in 250ms;
+        filter: grayscale(80%);
+        > .contain-project {
+            /* transition: ease-in 250ms; */
+            animation-name: fade-in;
+            animation-duration: 300ms;
+            animation-timing-function: cubic-bezier(0.390, 0.575, 0.565, 1.000);    
+            display: block;
+        }
+    }
+}
+
+.project_logo {
+    position:relative;
+}
+
+
+@keyframes scale-up {
+    from {
+        transform: scaleY(0.4);
+        transform-origin: 0% 100%;
+    }
+    to {
+        transform: scaleY(1);
+        transform-origin: 0% 100%;
     }
 }
