--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url('styles.css');
 @import url('home.css');
 @import url('footer.css');
+@import url('error.css');
 /* @import url('maintenance.css'); */
