Ajustement router + header / Connexion BDD

--- a/app/views/layouts/header.phtml
+++ b/app/views/layouts/header.phtml
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../public/assets/css/main.css" rel="stylesheet"/>
-    <link rel="icon" size="16x16" type="image" href="assets/img/favicon.svg"/>
-    <title>Audrey Norvez</title>
-</head>
-<body>
+<header class="scrolling-header primary-header" style="display:block">
+  <div id="hero-header">
+    <div class="primary-header__inner">
+      <div class="logo">
+        <a href="?v=">
+          <img src="../public/assets/img/flower-white-line.svg" alt="" />
+        </a>
+      </div>
+      <nav class="primary-nav">
+        <ul role="list">
+          <li><a href="./#life">Présentation</a></li>
+          <li><a href="?v=projects">Projets</a></li>
+          <li class="scrollTo scrollToContactSection"><a>Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</header>
