--- a/app/views/partials/404.phtml
+++ b/app/views/partials/404.phtml
@@ -1,20 +1,6 @@
-<?php ini_set('display_errors', 0); ?>
-<header class="scrolling-header primary-header" style="position:unset;display:block;margin-top:3vh">
-  <div id="hero-header">
-    <div class="primary-header__inner">
-      <div class="logo">
-        <img src="../public/assets/img/flower-white-line.svg" alt="" />
-      </div>
-      <nav class="primary-nav">
-        <ul role="list">
-          <li><a href="./#life">Présentation</a></li>
-          <li><a href="?v=projects">Projets</a></li>
-          <li class="scrollTo scrollToContactSection"><a>Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </div>
-</header>
+<?php 
+  ini_set('display_errors', 0); 
+?>
 <body>
   <section id="error">
     <div>
