--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -153,7 +153,7 @@ header{
 
             >.logo{
                 display: flex;
-                >img{
+                >a>img{
                     width:40px;
                 }
             }
@@ -306,6 +306,9 @@ header{
                 }
             }
         }
+    }
+    > .dateButton:hover{
+        cursor: pointer;
     }
     > .active {
         > p {
@@ -491,8 +494,9 @@ header{
 .project {
     align-items: center;
     justify-content: center;
-    width:18vw;
-    height: 32vh;
+    width:15vw;
+    height: 26vh;
+    border-radius: 4px;
     cursor: pointer;
     > .contain-project {
         display:none;
@@ -511,7 +515,7 @@ header{
         width:100%;
         height:100%;
         > img {
-            width:8vw;
+            width:10vw;
         }
     }
     &:hover {
@@ -525,6 +529,10 @@ header{
             display: block;
         }
     }
+}
+
+#wrap-project{
+    gap: 4rem;
 }
 
 .project_logo {
