--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2,4 +2,5 @@
 @import url('home.css');
 @import url('footer.css');
 @import url('error.css');
+@import url('projects.css');
 /* @import url('maintenance.css'); */
