--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3,4 +3,4 @@
 @import url('footer.css');
 @import url('error.css');
 @import url('projects.css');
-/* @import url('maintenance.css'); */
+@import url('maintenance.css');
