--- a/public/assets/css/maintenance.css
+++ b/public/assets/css/maintenance.css
@@ -1,7 +1,7 @@
 #maintenance{
     background: no-repeat url('../img/hero.png');
     background-size:cover;
-    background-position: bottom;
+    background-position: center;
     height: 100dvh;
     display:flex;
     flex-direction:column;
