--- a/public/assets/css/projects.css
+++ b/public/assets/css/projects.css
@@ -14,6 +14,41 @@
         }
     }
 }
+
+.pills{
+    width:60%;
+    margin:10dvh 20%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    column-gap: 2rem;
+    row-gap: 1.5rem;
+
+    >button{
+        border: none;
+        font: inherit;
+        outline: inherit;
+        color:unset;
+        font-weight: unset;
+        margin:0;
+        display: flex;
+        padding: 10px 38px;
+        gap: 10px;
+        border-radius: 50px;
+        width: fit-content;
+        font-weight: 600;
+        font-size: 20px;
+        background-color: var(--600-almond);
+    
+        &:hover{
+            cursor: pointer;
+            background-color: var(--500-almond);
+        }
+    }
+}
+
 #projects-section{
     background-image: url(../img/front-real.png);
     background-repeat: no-repeat;
