--- a/app/views/partials/projects.phtml
+++ b/app/views/partials/projects.phtml
@@ -5,13 +5,13 @@
     </div>
     <div class="pills">
         <button class="filter" onclick="filterSelection('all')">Tout voir</button>
-        <button class="filter" onclick="filterSelection('html/css')">HTML / CSS</button>
-        <button class="filter" onclick="filterSelection('vue.js')">Vue.JS</button>
-        <button class="filter" onclick="filterSelection('react.js')">React.JS</button>
-        <button class="filter" onclick="filterSelection('php/mysql')">PHP / MySQL</button>
-        <button class="filter" onclick="filterSelection('elementor')">WP / Elementor</button>
-        <button class="filter" onclick="filterSelection('divi')">WP / Divi</button>
-        <button class="filter" onclick="filterSelection('woocomerce')">WooCommerce</button>
+        <button class="filter" onclick="filterSelection('HTML/CSS')">HTML / CSS</button>
+        <button class="filter" onclick="filterSelection('Vue.JS')">Vue.JS</button>
+        <button class="filter" onclick="filterSelection('React.JS')">React.JS</button>
+        <button class="filter" onclick="filterSelection('PHP/MySQL')">PHP / MySQL</button>
+        <button class="filter" onclick="filterSelection('Elementor')">WP / Elementor</button>
+        <button class="filter" onclick="filterSelection('Divi')">WP / Divi</button>
+        <button class="filter" onclick="filterSelection('WooCommerce')">WooCommerce</button>
     </div>
 </div>
 <div id="projects-section">
@@ -25,71 +25,51 @@
     const filter = document.getElementsByClassName("filter");
     
     function loadData(array){
-        for (let i = 0; i < array.length; i++) {
-            // console.log(filter[i].innerText);
+        wrapProjects.innerHTML=``;
+        if (array.length == 0){
             newDiv = document.createElement("div");
-            newDiv.id = i;
-            newDiv.innerHTML =  ``
-            newDiv.innerHTML =  `
-                <a href="http://localhost/portfolio/public/?v=project&p=`+ array[i].ID +`">
-                    <div class="cardProject" style="background-color:#`+ array[i].primary_color +`;">
-                        <div class="flex contain-logo">
-                            <img class="project_logo" src="../public/assets/img/projects/`+ data[i].logo +`">
-                        </div>
-                        <div class="contain-project">
-                            <h3>`+ array[i].name +`</h3>
-                            <p>`+ array[i].short_description +`</p>
-                        </div>
-                    </div>
-                </a>
-            `;
-            newDiv.classList.add("filterDiv",array[i].tag_first,array[i].tag_second,array[i].tag_third)
+            wrapProjects.innerHTML =  `<p>Aucun projet trouvé</p>`;
             wrapProjects.appendChild(newDiv);
-        }
-    }
-    loadData(data);
-
-    filterSelection("all")
-
-    function filterSelection(c) {
-        let x = document.getElementsByClassName("filterDiv");
-        if (c == "all") c = "";
-        for (i = 0; i < x.length; i++) {
-            removeClass(x[i], "show");
-            if (x[i].className.indexOf(c) > -1) addClass(x[i], "show");
-        }
-    }
-
-    function addClass(element, name) {
-        var i, arr1, arr2;
-        arr1 = element.className.split(" ");
-        arr2 = name.split(" ");
-        for (i = 0; i < arr2.length; i++) {
-            if (arr1.indexOf(arr2[i]) == -1) {element.className += " " + arr2[i];}
-        }
-    }
-
-    function removeClass(element, name) {
-        var i, arr1, arr2;
-        arr1 = element.className.split(" ");
-        arr2 = name.split(" ");
-        for (i = 0; i < arr2.length; i++) {
-            while (arr1.indexOf(arr2[i]) > -1) {
-                arr1.splice(arr1.indexOf(arr2[i]), 1);     
+        } else {
+            for (let i = 0; i < array.length; i++) {
+                console.log("datas",data)
+                console.log("data",data[i])
+                console.log("logo",data[i].logo, "name", data[i].name)
+                newDiv = document.createElement("div");
+                newDiv.id = i;
+                newDiv.innerHTML =  ``
+                newDiv.innerHTML =  `
+                    <a href="http://localhost/portfolio/public/?v=project&p=`+ array[i].ID +`">
+                        <div class="cardProject" style="background-color:#`+ array[i].primary_color +`;">
+                            <div class="flex contain-logo">
+                                <img class="project_logo" src="../public/assets/img/projects/`+ data[i].logo +`">
+                            </div>
+                            <div class="contain-project">
+                                <h3>`+ array[i].name +`</h3>
+                                <p>`+ array[i].short_description +`</p>
+                            </div>
+                        </div>
+                    </a>
+                `;
+                wrapProjects.appendChild(newDiv);
             }
         }
-        element.className = arr1.join(" ");
     }
-
-    // // Add active class to the current button (highlight it)
-    // var btnContainer = document.getElementById("myBtnContainer");
-    // var btns = btnContainer.getElementsByClassName("btn");
-    // for (var i = 0; i < btns.length; i++) {
-    //     btns[i].addEventListener("click", function(){
-    //         var current = document.getElementsByClassName("active");
-    //         current[0].className = current[0].className.replace(" active", "");
-    //         this.className += "active";
-    //     });
-    // }
-
+    
+    function filterSelection(param){
+        let filteredData=[];
+        if (param == "all"){
+            loadData(data)
+        } else {
+            for (let j = 0; j < data.length; j++) { 
+                console.log(data);
+                if (param == data[j].tag_first || param == data[j].tag_second || param == data[j].tag_third){
+                    filteredData.push(data[j]);
+                }
+            }
+            loadData(filteredData);
+        }     
+    }
+    loadData(data);
+    
 </script>
